--- a/package.json
+++ b/package.json
@@ -4,20 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "bridge": "node --loader ts-node/esm src/bridge-server.ts",
+    "worker": "node --loader ts-node/esm src/watcher.ts",
+    "dev": "node --loader ts-node/esm --watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
     "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.95.3",
+    "chokidar": "^5.0.0",
     "dotenv": "^17.2.4",
     "fastify": "^5.7.4",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/chokidar": "^1.7.5",
     "@types/node": "^25.2.2",
+    "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
