--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 
 # Google AI (Gemini)
 GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL=gemini-2.5-flash-preview-05-20
+
+# Server Configuration
+PORT=4000
 
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
