--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "bridge": "node --loader ts-node/esm src/bridge-server.ts",
+    "start": "node --loader ts-node/esm src/bridge-server.ts",
+    "dev": "node --loader ts-node/esm --watch src/bridge-server.ts",
+    "test:mock": "curl -X POST http://localhost:4000/pipeline?mock=true -H 'Content-Type: application/json' -d @test-input.json",
     "worker": "node --loader ts-node/esm src/watcher.ts",
-    "dev": "node --loader ts-node/esm --watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,7 +22,8 @@
     "chokidar": "^5.0.0",
     "dotenv": "^17.2.4",
     "fastify": "^5.7.4",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/chokidar": "^1.7.5",
