--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 
 # Google AI (Gemini)
 GEMINI_API_KEY=your_gemini_api_key_here
-GEMINI_MODEL=gemini-2.5-flash-preview-05-20
+GEMINI_MODEL=gemini-2.0-flash
 
 # Server Configuration
 PORT=4000
