--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
 # Website Pipeline API - Environment Variables
 
-# Google AI (Gemini)
+# Google AI (Gemini) - Used by Architect Agent (always) and Builder Agent (when BUILDER_LLM_PROVIDER=gemini)
 GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-2.0-flash
+
+# OpenAI (GPT) - Used by Builder Agent when BUILDER_LLM_PROVIDER=openai
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o
+
+# LLM Provider Toggle
+# Builder Agent can use either 'gemini' or 'openai' (Architect Agent always uses 'gemini')
+BUILDER_LLM_PROVIDER=gemini
 
 # Server Configuration
 PORT=4000
