--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node --loader ts-node/esm src/bridge-server.ts",
+    "start": "tsc && node dist/bridge-server.js",
     "dev": "node --loader ts-node/esm --watch src/bridge-server.ts",
     "test:mock": "curl -X POST http://localhost:4000/pipeline?mock=true -H 'Content-Type: application/json' -d @test-input.json",
-    "worker": "node --loader ts-node/esm src/watcher.ts",
+    "worker": "tsc && node dist/watcher.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "chokidar": "^5.0.0",
     "dotenv": "^17.2.4",
     "fastify": "^5.7.4",
+    "openai": "^6.18.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
