feat: Introduce Claude LLM integration, enable configurable LLM providers for agents, and enhance prompt handling for optional business details.

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,14 @@ GEMINI_MODEL=gemini-2.0-flash
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4o
 
+# Anthropic (Claude) - Used when provider is set to 'claude'
+ANTHROPIC_API_KEY=your_anthropic_key
+ANTHROPIC_MODEL=claude-3-5-sonnet-20240620
+
 # LLM Provider Toggle
-# Builder Agent can use either 'gemini' or 'openai' (Architect Agent always uses 'gemini')
+# Architect Agent provider: 'gemini' | 'openai' | 'claude' (default: gemini)
+ARCHITECT_LLM_PROVIDER=gemini
+# Builder Agent provider: 'gemini' | 'openai' | 'claude' (default: gemini)
 BUILDER_LLM_PROVIDER=gemini
 
 # Server Configuration
